# HypoForge

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  findings.md  progress.md  pyproject.toml  task_plan.md
.reports/: codemap-diff.txt
docs/CODEMAPS/: architecture.md  backend.md  data.md  dependencies.md  frontend.md
docs/plans/: 2026-03-08-hypoforge-design.md  2026-03-08-hypoforge-mvp.md  2026-03-09-hypoforge-frontend-design.md  2026-03-09-hypoforge-frontend-implementation.md  2026-03-10-hypoforge-briefing-depth-design.md
docs/reports/: 2026-03-10-multi-topic-live-report.md  2026-03-10-strict-8-topic-live-report.md  2026-04-08-live-batch-report.md
frontend/: .eslintrc.json  README.md  components.json  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend-v2/: package-lock.json  package.json
output/: audit-impeccable.md
scripts/: alphaxiv_oauth.py  run_live_batch.py  run_topic.py
src/hypoforge/: __init__.py  config.py
tests/: __init__.py  conftest.py
tests/e2e/: test_end_to_end.py  test_reflection_e2e.py
tests/helpers/: __init__.py  reflection_helpers.py
tests/integration/: test_agent_runner.py  test_coordinator.py  test_coordinator_degradation.py  test_health_api.py  test_managed_execution.py  test_reflection_backtrack.py  test_reflection_disabled.py  test_reflection_integration.py  test_reflection_retry.py  test_runs_api.py  test_stage_degradation_status.py  test_tool_trace_recording.py  test_validation_pipeline.py
tests/live/: test_golden_topics_api.py  test_managed_live_paths.py  test_real_runs_api.py
(+227 files in other folders)
